src/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: viyaapi
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  namespace: dev
spec:
  tls:
  - hosts:
    - viyans.ingress-nginx.kdksecdb-m1.secdb.sashq-d.openstack.sas.com
    secretName: viyaapi-tls
  rules:
  - host: viyans.ingress-nginx.kdksecdb-m1.secdb.sashq-d.openstack.sas.com
    http:
      paths:
      - path: /viyaapi
        pathType: Prefix
        backend:
          serviceName: viyaapi
          servicePort: 8080
